gupnp-didl-lite-object: fix namespace getters

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=740365

Signed-off-by: Sven Neumann <neumann@teufel.de>